# XY_FX_Pad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  firmware.ino
Source/: ControllerReceiver.cpp  ControllerReceiver.h  ControllerTypes.h  Effects.cpp  Effects.h  LedRingDisplay.h  Main.cpp  MainComponent.cpp  MainComponent.h  PressureMeter.h  SpectrumDisplay.h  SystemAudioRouter.cpp  SystemAudioRouter.h  Tempo.cpp  Tempo.h  XYPad.cpp  XYPad.h
Tools/: ControllerBridge.cpp  install_blackhole.sh
docs/: CONTROLLER.md  EFFECTS.md  LED_SIMULATION.md  TECHNICAL_SPEC.md
